--- a/index.ipynb
+++ b/index.ipynb
@@ -155,8 +155,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'\n",
-    "\"\""
+    "name = \"art vandelay\" # 'Art Vandelay'\n",
+    "name"
    ]
   },
   {
