--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,8 @@
    },
    "outputs": [],
    "source": [
-    "boss = \"Ceo\" # 'CEO'"
+    "boss = \"Ceo\" # 'CEO'\n",
+    "boss.uppercase()"
    ]
   },
   {
