--- a/index.ipynb
+++ b/index.ipynb
@@ -193,8 +193,7 @@
     }
    ],
    "source": [
-    "\"Ceo\" # 'CEO'\n",
-    "\"Ceo\".uppercase('Ceo')"
+    "\"Ceo\" # 'CEO'\n"
    ]
   },
   {
