--- a/index.ipynb
+++ b/index.ipynb
@@ -193,8 +193,8 @@
     }
    ],
    "source": [
-    "\"Ceo\" # 'CEO'\n",
-    "uppercase(\"ceo\")"
+    "na\"Ceo\" # 'CEO'\n",
+    "uppercase(\"Ceo\")"
    ]
   },
   {
