Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,8 +193,7 @@
     }
    ],
    "source": [
-    "name = \"Ceo\" # 'CEO'\n",
-    "name.uppercase(\"Ceo\")"
+    "\"Ceo\" # 'CEO'\n"
    ]
   },
   {
