Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,8 @@
    },
    "outputs": [],
    "source": [
-    "shorty = 'vandelay.com' # 'www.vandelay.com'\n"
+    "shorty = 'vandelay.com' # 'www.vandelay.com'\n",
+    "'www.' + s"
    ]
   },
   {
