--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
    "outputs": [],
    "source": [
     "shorty = 'vandelay.com' # 'www.vandelay.com'\n",
-    "'www.' + s"
+    "'www.' + shorty"
    ]
   },
   {
