--- a/index.ipynb
+++ b/index.ipynb
@@ -276,7 +276,8 @@
    },
    "outputs": [],
    "source": [
-    "numbers = \"7285553334\" # 728"
+    "numbers = \"7285553334\" # 728\n",
+    "numbers[:728]"
    ]
   },
   {
